[package]
name = "hacker_toolbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
#trust-dns-resolver = "0.22.0"  #使用此库查询DNS时会使自己的网络断网
dns-lookup = "1.0.8" #小型DNS包装器
sysinfo = "0.26.2"
rayon = "1.5.3" #